AI-JADEDEVS4/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID(Contact.Account.Id)</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF ( ISBLANK(ContactId), TEXT(Lead.Type__c),Contact.Account_Type__c )</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Industry__c</fullName>
        <description>Pulls the Adaptive Industry field from either the lead or account objects</description>
        <formula>IF( ISBLANK( ContactId ) ,TEXT(Lead.Adaptive_Industry__c), TEXT(Contact.Account.Adaptive_Industry__c))</formula>
        <inlineHelpText>Pulls the Adaptive Industry field from either the lead or account objects</inlineHelpText>
        <label>Adaptive Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPE_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPE Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Channel_Source__c</fullName>
        <description>This field is used to track the channel that was used to promote the campaign. Currently this is auto populated only by Eloqua.</description>
        <inlineHelpText>This is set by Eloqua. If you would like to add a channel contact Marketing Operations.</inlineHelpText>
        <label>Campaign Channel Source</label>
        <picklist>
            <picklistValues>
                <fullName>WEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3RD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLOG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Associated_Date__c</fullName>
        <description>Maps legacy CreatedDate for DaVinci migration.</description>
        <label>First Associated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GA_Adwords_ID__c</fullName>
        <description>UTM Parameter for Google Analytics Adwords ID</description>
        <inlineHelpText>UTM Parameter for Google Analytics Adwords ID</inlineHelpText>
        <label>GA Adwords ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Campaign_Name__c</fullName>
        <description>UTM Parameter for Google Analytics Campaign Name</description>
        <inlineHelpText>UTM Parameter for Google Analytics Campaign Name</inlineHelpText>
        <label>GA Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Content__c</fullName>
        <description>Google Analytics parameter to record the content of the Campaign. (Usually used as an AB split test)</description>
        <inlineHelpText>Google Analytics parameter to record the content of the Campaign. (Usually used as an AB split test)</inlineHelpText>
        <label>GA Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Keyword__c</fullName>
        <description>UTM Parameter for Google Analytics Keyword</description>
        <inlineHelpText>UTM Parameter for Google Analytics Keyword</inlineHelpText>
        <label>GA Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Landing_Page__c</fullName>
        <description>UTM Parameter for Google Analytics Landing Page</description>
        <inlineHelpText>UTM Parameter for Google Analytics Landing Page</inlineHelpText>
        <label>GA Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Medium__c</fullName>
        <description>Google Analytics parameter to record the medium or channel of the Campaign</description>
        <inlineHelpText>Google Analytics parameter to record the medium or channel of the Campaign</inlineHelpText>
        <label>GA Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Offer__c</fullName>
        <description>Google Analytics parameter to record the offer of the Campaign. (Whitepapers, webcasts, events, etc.)</description>
        <inlineHelpText>Google Analytics parameter to record the offer of the Campaign. (Whitepapers, webcasts, events, etc.)</inlineHelpText>
        <label>GA Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Source__c</fullName>
        <description>Google Analytics parameter to record the source of the Campaign</description>
        <inlineHelpText>Google Analytics parameter to record the source of the Campaign</inlineHelpText>
        <label>GA Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>08/04/2015 Used for Gainsight to map and trigger milestones. This field is not visible on the page layouts.  tested in DEV Sandbox:  leadrules.</description>
        <label>GS Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hot_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Gets the Lead Score from the lead or if blank from the contact record</description>
        <formula>IF(  ISBLANK(ContactId),Lead.Lead_Score__c,Contact.Calculated_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Look for the Lead Score from the contact or lead records</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <description>Returns Lifecycle stage from the lead or contact record</description>
        <formula>IF( ISBLANK( ContactId ),  TEXT(Lead.Lifecycle_Stage__c),TEXT(Contact.Lifecycle_Stage__c))</formula>
        <inlineHelpText>Returns Lifecycle stage from the lead or contact record</inlineHelpText>
        <label>Lifecycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On24_C_Event_ID__c</fullName>
        <description>This will be used by On24 to identify if a webinar attendee is in the campaign.</description>
        <inlineHelpText>This will be used by On24 to identify if a webinar attendee is in the campaign.</inlineHelpText>
        <label>On24 C Event ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On24_Event_Channel_Source__c</fullName>
        <description>This field records the channel for the On24 Webinar that referred the campaign member.</description>
        <inlineHelpText>This field records the channel for the On24 Webinar that referred the campaign member.</inlineHelpText>
        <label>On24 Event Channel Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On24_Integration__c</fullName>
        <description>This is a system field for the On24 Integration. Please leave this field blank as it is auto populated by On24.</description>
        <inlineHelpText>This is a system field for the On24 Integration. Please leave this field blank as it is auto populated by On24.</inlineHelpText>
        <label>On24 Integration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRL_Used_Date__c</fullName>
        <formula>Lead.PRL_Used_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRL Used Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRL_Used__c</fullName>
        <formula>Lead.PRL_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRL Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Lead__c</fullName>
        <formula>Lead.Eloqua_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner: Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Referal_Follow_Up__c</fullName>
        <description>Returns Leads Partner Followup values</description>
        <formula>IF(ISPICKVAL(Lead.Partner_Referal_Follow_Up__c, &quot;Adaptive Planning&quot;),&quot;Adaptive Planning&quot;,
IF(ISPICKVAL(Lead.Partner_Referal_Follow_Up__c, &quot;Partner&quot;),&quot;Partner&quot;,&quot;&quot;))</formula>
        <inlineHelpText>Returns Leads Partner Followup values, no value for the contact/account field</inlineHelpText>
        <label>Partner Referral Follow Up</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDR_Status__c</fullName>
        <formula>IF(ISBLANK( ContactId  ) , TEXT( Lead.Status ),TEXT( Contact.Status__c ))</formula>
        <label>SDR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKO_2016__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SKO-2016</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_STD__c</fullName>
        <description>Gets the Title STD from the lead or contact record</description>
        <formula>IF( ISBLANK( ContactId ) , TEXT(Lead.Title_STD__c), TEXT(Contact.Title_STD__c) )</formula>
        <inlineHelpText>Formula that pulls the Title-STD field from the lead or contact record</inlineHelpText>
        <label>Title-STD</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Campaign_Member_Page_Layout</fullName>
        <active>true</active>
        <label>Campaign Member Page Layout</label>
    </recordTypes>
</CustomObject>